--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
             </tr>
         <br>
         <tr align="center">
-            <td>
+            <td width="100%">
             {% if page.title == 'Home' %}
                 <p>
                     <a href="{{ "/" | prepend: site.google_scholar_url }}">Google Scholar</a><span
