--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,17 +7,19 @@
                 <td class="center-cell" valign="top"><p><img src="./photo.png", alt="",
                     width="150", align="center"></p></td>
                 <td width="80%" valign="top"><p>Hi, I'm Yuwei, a CS PhD student at National University
-                    of Singapore. My research is motivated by deploying robots into open-ended 
-                    unstructured environments for general and timely assistance.  In particular, 
-                    I'm interested in scalable, adaptive and reusable robot skill acquisition 
-                    through low-resource imitation learning and reinforcement learning. <br><br>
-                    Previously, I worked on applied research in learning for
-                    robot manipulation at Dyson. I was fortunate to have worked
-                    with a team of passionate roboticists and Dr Edward Johns
-                    there. I have also worked on a series of interesting
-                    real-life deep learning solutions as an R&D engineer at Pansonsic R&D
-                    Center Singapore. Before that, I obtained my bachelor's degree from Nanyang
-                    Technological University advised by Prof Justin Dauwels.<br> </p></td>
+                    of Singapore.  My research is motivated by deploying robots into open-ended, 
+                    unstructured environments for general and timely assistance. In particular, 
+                    I'm interested in scalable, adaptive, and reusable robot skill acquisition 
+                    through low-resource imitation learning and reinforcement learning. 
+                    <br>
+                    <br>
+                    Previously, I worked on applied research in learning for robot manipulation at 
+                    Dyson. where I was fortunate to collaborate with a team of passionate 
+                    roboticists and Dr. Edward Johns there. I have also worked on a series of 
+                    interesting real-life deep learning solutions as an R&D engineer at 
+                    Panasonic R&D Center Singapore. Before that, 
+                    I obtained my bachelor's degree from Nanyang Technological University, 
+                    advised by Prof Justin Dauwels.<br><br> </p></td>
             </tr>
         <br>
         <tr align="center">
