--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <tbody>
             <tr>
                 <td class="center-cell" valign="top"><p><img src="./photo.png", alt="",
-                    width="150", align="center"></p></td>
+                    width="20%", align="center"></p></td>
                 <td width="80%" valign="top"><p>Hi, I'm Yuwei, a CS PhD student at National University
                     of Singapore.  My research is motivated by deploying robots into open-ended, 
                     unstructured environments for general and timely assistance. In particular, 
