--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
             <tr>
                 <td class="center-cell" valign="top"><p><img src="./photo.png", alt="",
                     width="20%", align="center"></p></td>
-                <td width="80%" valign="top"><p>Hi, I'm Yuwei, a CS PhD student at National University
+                <td width="80%" align="center"><p>Hi, I'm Yuwei, a CS PhD student at National University
                     of Singapore.  My research is motivated by deploying robots into open-ended, 
                     unstructured environments for general and timely assistance. In particular, 
                     I'm interested in scalable, adaptive, and reusable robot skill acquisition 
@@ -22,8 +22,8 @@
                     advised by Prof Justin Dauwels.<br><br> </p></td>
             </tr>
         <br>
-        <tr align="center">
-            <td width="100%">
+        <tr>
+            <td>
             {% if page.title == 'Home' %}
                 <p>
                     <a href="{{ "/" | prepend: site.google_scholar_url }}">Google Scholar</a><span
