--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
         <tbody>
             <tr>
                 <td class="center-cell" valign="top"><p><img src="./photo.png", alt="",
-                    width="20%", align="center"></p></td>
-                <td width="80%" style="text-align: left;"><p>Hi, I'm Yuwei, a CS PhD student at National University
+                    width="150", align="center"></p></td>
+                <td width="900" style="text-align: left;"><p>Hi, I'm Yuwei, a CS PhD student at National University
                     of Singapore.  My research is motivated by deploying robots into open-ended, 
                     unstructured environments for general and timely assistance. In particular, 
                     I'm interested in scalable, adaptive, and reusable robot skill acquisition 
@@ -20,7 +20,6 @@
                     Panasonic R&D Center Singapore. Before that, 
                     I obtained my bachelor's degree from Nanyang Technological University, 
                     advised by Prof Justin Dauwels.<br><br> </p></td>
-            </tr>
         <br>
         {% if page.title == 'Home' %}
             <p>
@@ -35,6 +34,8 @@
                 <a href="{{ "/" | prepend: site.baseurl }}">&lt;&ndash;&ndash; Back</a>
             </p>
         {% endif %}
+        <br>
+        </tr>
         </tbody>
     </table>
 </header>
