--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                     <br>
                     <br>
                     Previously, I worked on applied research in learning for robot manipulation at 
-                    Dyson. where I was fortunate to collaborate with a team of passionate 
+                    Dyson. where I was fortunate to have worked with a team of passionate 
                     roboticists and Dr. Edward Johns there. I have also worked on a series of 
                     interesting real-life deep learning solutions as an R&D engineer at 
                     Panasonic R&D Center Singapore. Before that, 
