--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
         <tbody>
             <tr>
                 <td width="80%", stype="text-align: left;"><h1>{{
-                        site.description }}</h1><br><p> {{site.email}}</p>
-                 <p>
+                        site.description }}</h1><br><p style="font-size: 0.8em;"> {{site.email}}</p><br>
+                 <p style="font-size: 0.8em;">
                     <a href="{{ "/" | prepend: site.google_scholar_url }}">Google Scholar</a><span
                         class="u-separate"></span> <a href="{{ "/" | prepend:
                         site.github_url}}">Github</a><span class="u-separate"></span><a href="{{ "/" | prepend:
@@ -17,6 +17,7 @@
         </tr>
         </tbody>
     </table>
+    <br>
     <br>
     <p>
         Hi, I'm Yuwei, a CS PhD student at National University
