--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,11 +5,9 @@
                 <td width="80%", stype="text-align: left;"><h1>{{
                         site.description }}</h1><br><p style="font-size: 1.5em;"> {{site.email}}</p><br>
                  <p style="font-size: 1.5em;">
-                    <a href="{{ "/" | prepend: site.google_scholar_url }}">Google Scholar</a><span
-                        class="u-separate"></span> <a href="{{ "/" | prepend:
-                        site.github_url}}">Github</a><span class="u-separate"></span><a href="{{ "/" | prepend:
-                        site.linkedin_url}}">Linkedin</a><span class="u-separate"></span> <a
-                        href="{{ "/" | prepend: site.twitter_url}}">Twitter</a>
+                    <a href="{{site.google_scholar_url}}">Google Scholar</a><span
+                        class="u-separate"></span> <a href="{{site.github_url}}">Github</a><span class="u-separate"></span><a href="{{site.linkedin_url}}">Linkedin</a><span class="u-separate"></span> <a
+                        href="{{site.twitter_url}}">Twitter</a>
                 </p></td>
                 <td class="center-cell" valign="top"><p><img src="./photo.png", alt="",
                     width="150", align="center"></p></td>
