--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,12 +26,15 @@
         <br>
         <br>
         Previously, I worked on applied research in learning for robot manipulation at 
-        Dyson. where I was fortunate to have worked with a team of passionate 
-        roboticists and Dr. Edward Johns there. I have also worked on a series of 
+        <a href="https://www.youtube.com/watch?v=2Bh61aY8ncg">Dyson robotics
+            research team</a>. where I was fortunate to have worked with a team of passionate 
+        roboticists and <a href="https://profiles.imperial.ac.uk/e.johns">Dr.
+            Edward Johns</a> there. I have also worked on a series of 
         interesting real-life deep learning solutions as an R&D engineer at 
-        Panasonic R&D Center Singapore. Before that, 
+        <a href="https://research.sg.panasonic.com/">Panasonic R&D Center
+            Singapore</a>. Before that, 
         I obtained my bachelor's degree from Nanyang Technological University, 
-        advised by Prof Justin Dauwels.
+        advised by <a href="https://microelectronics.tudelft.nl/People/bio.php?id=744">Prof Justin Dauwels</a>.
         <br>
         <br> 
     </p>
