--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
         <br>
         Previously, I worked on applied research in learning for robot manipulation at 
         <a href="https://www.youtube.com/watch?v=2Bh61aY8ncg">Dyson robotics
-            research team</a>. where I was fortunate to have worked with a team of passionate 
+            research</a>. where I was fortunate to have worked with a team of passionate 
         roboticists and <a href="https://profiles.imperial.ac.uk/e.johns">Dr.
             Edward Johns</a> there. I have also worked on a series of 
         interesting real-life deep learning solutions as an R&D engineer at 
