--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
         <a href="https://www.youtube.com/watch?v=2Bh61aY8ncg">Dyson robotics
             research</a>. where I was fortunate to have worked with a team of passionate 
         roboticists and <a href="https://profiles.imperial.ac.uk/e.johns">Dr.
-            Edward Johns</a> there. I have also worked on a series of 
+            Edward Johns</a>. I have also worked on a series of 
         interesting real-life deep learning solutions as an R&D engineer at 
         <a href="https://research.sg.panasonic.com/">Panasonic R&D Center
             Singapore</a>. Before that, 
