--- a/_sass/components/_archives.scss
+++ b/_sass/components/_archives.scss
@@ -12,13 +12,12 @@
 }
 
 .c-archives__list {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.0rem;
+    margin-top: 1.0rem;
     list-style: none;
 }
 
 .c-archives__item {
-    padding-top: 1.0rem;
-    padding-bottom: 1.0rem;
     border-top: 1px solid #EFF1F3;
     @media screen and (min-width: $bp__sm) {
         display: -webkit-box;
