--- a/_sass/components/_archives.scss
+++ b/_sass/components/_archives.scss
@@ -38,10 +38,10 @@
     }
 
     h3 {
-        @include fs--body;
+        @include fs--meta;
     }
 
     p {
-        @include fs--body;
+        @include fs--meta;
     }
 }
