--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,8 +3,11 @@ layout: default
 ---
 
 <div class="c-page">
+    <h2 class="c-archives__year">About</h2>
+    <ul class="c-archives__list">
 		<article class="c-article">
    	 	{% include header.html %}
+    </ul>
     	<div class="c-article__main">
         {{ content }}
 		{% if page.title != 'Home' %}
