--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,8 @@
     </table>
     <br>
     <br>
+    <h2 class="c-archives__year">About</h2>
+    <ul class="c-archives__list">
     <p>
         Hi, I'm Yuwei, a CS PhD student at National University
         of Singapore.  My research is motivated by deploying robots into open-ended, 
@@ -38,4 +40,5 @@
         <br>
         <br> 
     </p>
+    </ul>
 </header>
