--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
     <br>
     <h2 class="c-archives__year">About</h2>
     <ul class="c-archives__list">
-    <p>
+    <p stype="margin: 20px; border: 1px solid #000;">
         Hi, I'm Yuwei, a CS PhD student at National University
         of Singapore.  My research is motivated by deploying robots into open-ended, 
         unstructured environments for general and timely assistance. In particular, 
