--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,26 +19,28 @@
     <br>
     <h2 class="c-archives__year">About</h2>
     <ul class="c-archives__list">
-    <p stype="margin: 20px; border: 1px solid #000;">
-        Hi, I'm Yuwei, a CS PhD student at National University
-        of Singapore.  My research is motivated by deploying robots into open-ended, 
-        unstructured environments for general and timely assistance. In particular, 
-        I'm interested in scalable, adaptive, and reusable robot skill acquisition 
-        through low-resource imitation learning and reinforcement learning. 
-        <br>
-        <br>
-        Previously, I worked on applied research in learning for robot manipulation at 
-        <a href="https://www.youtube.com/watch?v=2Bh61aY8ncg">Dyson robotics
-            research</a>. where I was fortunate to have worked with a team of passionate 
-        roboticists and <a href="https://profiles.imperial.ac.uk/e.johns">Dr.
-            Edward Johns</a>. I have also worked on a series of 
-        interesting real-life deep learning solutions as an R&D engineer at 
-        <a href="https://research.sg.panasonic.com/">Panasonic R&D Center
-            Singapore</a>. Before that, 
-        I obtained my bachelor's degree from Nanyang Technological University, 
-        advised by <a href="https://microelectronics.tudelft.nl/People/bio.php?id=744">Prof Justin Dauwels</a>.
-        <br>
-        <br> 
-    </p>
+        <li class="c-archives__item">
+        <p>
+            Hi, I'm Yuwei, a CS PhD student at National University
+            of Singapore.  My research is motivated by deploying robots into open-ended, 
+            unstructured environments for general and timely assistance. In particular, 
+            I'm interested in scalable, adaptive, and reusable robot skill acquisition 
+            through low-resource imitation learning and reinforcement learning. 
+            <br>
+            <br>
+            Previously, I worked on applied research in learning for robot manipulation at 
+            <a href="https://www.youtube.com/watch?v=2Bh61aY8ncg">Dyson robotics
+                research</a>. where I was fortunate to have worked with a team of passionate 
+            roboticists and <a href="https://profiles.imperial.ac.uk/e.johns">Dr.
+                Edward Johns</a>. I have also worked on a series of 
+            interesting real-life deep learning solutions as an R&D engineer at 
+            <a href="https://research.sg.panasonic.com/">Panasonic R&D Center
+                Singapore</a>. Before that, 
+            I obtained my bachelor's degree from Nanyang Technological University, 
+            advised by <a href="https://microelectronics.tudelft.nl/People/bio.php?id=744">Prof Justin Dauwels</a>.
+            <br>
+            <br> 
+        </p>
+        <li>
     </ul>
 </header>
